# Canton-MCP-Server

./: .dockerignore  .gitignore  CANTON_REFERENCE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: canton_architecture.md  canton_quickstart_demo.md  chainsafe_mcp_reference.md  daml_introduction.md  daml_language_reference.md  daml_ledger_model.md  daml_patterns.md  llm_architecture.md  splice_overview.md  splice_scan_api.md
src/: server.py
